--- a/style.css
+++ b/style.css
@@ -12,10 +12,28 @@
     width: 100%;
     height: 100%;
     transition: left 1s;
-    background-color: aqua;
+    background-color: rgb(43, 161, 43);
 }
 #mapGame{
-    background-color: black;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: left 1s;
+    background-color: rgb(175, 96, 96);
+}
+#airQuiz{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: left 1s;
+    background-color: rgb(245, 148, 37);
+}
+#toBeContinue{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: left 1s;
+    background-color: rgb(79, 38, 194);
 }
 #slideRight{
     width: 0; 
@@ -28,6 +46,9 @@
     border-left: 60px solid rgb(145, 145, 145);
     transition: border-left 0.7s;
 }
+#slideRight:hover{
+    background-color: rgb(241, 183, 94);
+}
 #slideLeft{
     width: 0; 
     height: 0; 
@@ -38,4 +59,7 @@
     border-bottom: 60px solid transparent;
     border-right: 60px solid rgb(145, 145, 145);
     transition: border-right 0.7s;
+}
+#slideLeft:hover{
+    background-color: rgb(241, 183, 94);
 }
