--- a/style.css
+++ b/style.css
@@ -4,13 +4,17 @@ background-image: linear-gradient(180deg, red, yellow);
 
 Use this to change a tag colors if want, active means when pressing the link
 */
+body {
+  overflow-x: hidden; /* Hide horizontal scrollbars */
+}
 #topNavigaion {
     background-color: black;
     position: absolute;
-    width: 100%;
-    height: 8%;
-    left: 0%;
-    top: 0%;
+    /*vw=1% of device width*/
+    width: 100vw;
+    height: 8vh;
+    left: 0vw;
+    top: 0vh;
     text-align: center;
     font-size: x-large;
     border-bottom: white 2px solid;
@@ -73,10 +77,10 @@ a:hover {
 }
 #introBanner{
     position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0%;
-    top: 8%;
+    width: 100vw;
+    height: 100vh;
+    left: 0vw;
+    top: 8vh;
     background-color: black;
 }
 #introImg{
@@ -87,10 +91,10 @@ a:hover {
 }
 #overlayText{
     position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0%;
-    top: 0%;
+    width: 100vw;
+    height: 100vh;
+    left: 0vw;
+    top: 0vh;
     text-align: center;
     color: white;
     font-size: xx-large;
@@ -98,65 +102,65 @@ a:hover {
 }
 #aboutMe{
     position: absolute;
-    width: 100%;
-    height: 125%;
-    left: 0%;
-    top: 108%;
+    width: 100vw;
+    height: 125vh;
+    left: 0vw;
+    top: 108vh;
     text-align: center;
     font-size: x-large;
     background-color: rgb(223, 219, 206);
 }
 #aboutMeText{
     position: absolute;
-    width: 80%;
-    height: 100%;
-    left: 10%;
-    top: 0%;
+    width: 80vw;
+    height: 100vh;
+    left: 10vw;
+    top: 0vh;
 }
 #decorationLineTop{
     position: absolute;
-    width: 80%;
+    width: 80vw;
     height: 0;
     background-color: rgb(49, 135, 233);
-    right: 0%;
-    top: 0%;
+    right: 0vw;
+    top: 0vh;
     border-top: 60px solid transparent;
     border-bottom: transparent;
     border-left: 60px solid rgb(223, 219, 206);
 }
 #decorationBorderTop{
     position: absolute;
-    width: 100%;
-    height: 2%;
+    width: 100vw;
+    height: 2vh;
     background-color: rgb(49, 135, 233);
-    left: 0%;
-    top: 0%;
+    left: 0vw;
+    top: 0vh;
 }
 #decorationLineBottom{
     position: absolute;
-    width: 80%;
+    width: 80vw;
     height: 0;
     background-color: rgb(49, 135, 233);
-    left: 0%;
-    bottom: 0%;
+    left: 0vw;
+    bottom: 0vh;
     border-top: transparent;
     border-bottom: 60px solid transparent;
     border-right: 60px solid rgb(223, 219, 206);
 }
 #decorationBorderBottom{
     position: absolute;
-    width: 100%;
-    height: 2%;
+    width: 100vw;
+    height: 2vh;
     background-color: rgb(49, 135, 233);
-    left: 0%;
-    bottom: 0%;
+    left: 0vw;
+    bottom: 0vh;
 }
 #slideContainer{
     position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0%;
-    top: 233%;
+    width: 100vw;
+    height: 100vh;
+    left: 0vw;
+    top: 233vh;
     overflow: hidden;
     text-align: left;
     font-size: large;
@@ -164,54 +168,54 @@ a:hover {
 }
 .textContainer{
     position: absolute;
-    width: 40%;
-    height: 80%;
-    right: 15%;
-    top: 6.5%;
+    width: 40vw;
+    height: 80vh;
+    right: 15vw;
+    top: 6.5vh;
 }
 .imgContainer{
     position: absolute;
-    width: 25%;
-    height: 80%;
-    left: 15%;
-    top: 6.5%;
+    width: 25vw;
+    height: 80vh;
+    left: 15vw;
+    top: 6.5vh;
     overflow: hidden;
 }
 .slideImg{
     position: absolute;
-    left: 0%;
-    top: 0%;
+    left: 0vw;
+    top: 0vh;
 }
 #intro{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     transition: left 1s;
 }
 #mapGame{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     transition: left 1s;
 }
 #airQuiz{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     transition: left 1s;
 }
 #toBeContinue{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     transition: left 1s;
 }
 #slideRight{
     width: 0; 
     height: 0; 
     position: absolute;
-    right: 5%;
-    top: 40%;
+    right: 5vw;
+    top: 40vh;
     border-top: 60px solid transparent;
     border-bottom: 60px solid transparent;
     border-left: 60px solid rgb(253, 222, 175);
@@ -222,8 +226,8 @@ a:hover {
     width: 0; 
     height: 0; 
     position: absolute;
-    right: 4.63%;
-    top: 38.6%;
+    right: 4.63vw;
+    top: 38.6vh;
     border-top: 70px solid transparent;
     border-bottom: 70px solid transparent;
     border-left: 70px solid rgb(0, 0, 0);
@@ -233,8 +237,8 @@ a:hover {
     width: 0; 
     height: 0; 
     position: absolute;
-    left: 5%;
-    top: 40%;
+    left: 5vw;
+    top: 40vh;
     border-top: 60px solid transparent;
     border-bottom: 60px solid transparent;
     border-right: 60px solid rgb(253, 222, 175);
@@ -245,8 +249,8 @@ a:hover {
     width: 0; 
     height: 0; 
     position: absolute;
-    left: 4.63%;
-    top: 38.6%;
+    left: 4.63vw;
+    top: 38.6vh;
     border-top: 70px solid transparent;
     border-bottom: 70px solid transparent;
     border-right: 70px solid black;
@@ -262,27 +266,27 @@ a:hover {
     transition: opacity 0s;
 }
 #slide1{
-    bottom: 5%;
-    left: 45%;
+    bottom: 5vh;
+    left: 45vw;
 }
 #slide2{
-    bottom: 5%;
-    left: 47.5%;
+    bottom: 5vh;
+    left: 47.5vw;
 }
 #slide3{
-    bottom: 5%;
-    left: 50%;
+    bottom: 5vh;
+    left: 50vw;
 }
 #slide4{
-    bottom: 5%;
-    left: 52.5%;
+    bottom: 5vh;
+    left: 52.5vw;
 }
 #footer{
     position: absolute;
-    width: 100%;
-    height: 40%;
-    left: 0%;
-    top: 333%;
+    width: 100vw;
+    height: 40vh;
+    left: 0vw;
+    top: 333vh;
     background-color: rgb(0, 0, 0);
     text-align: center;
     color: white;
