--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ background-image: linear-gradient(180deg, red, yellow);
 Use this to change a tag colors if want, active means when pressing the link
 */
 body {
+    margin: 0;
     overflow-x: hidden; /* Hide horizontal scrollbars */
 }
 div{
@@ -12,7 +13,7 @@ div{
 }
 #topNavigaion {
     background-color: black;
-    position: absolute;
+    position: fixed;
     /*vw=1% of device width*/
     width: 100vw;
     height: 8vh;
