--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ background-image: linear-gradient(180deg, red, yellow);
 
 Use this to change a tag colors if want, active means when pressing the link
 */
-html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
+html{
+    -ms-text-size-adjust:100%;
+    -webkit-text-size-adjust:100%
+}
 body {
     margin: 0;
     overflow-x: hidden; /* Hide horizontal scrollbars */
