--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ div{
     /*Relative to the font-size of the element (2em means 2 times the size of the current font)*/
     font-size: 1.5em;
     border-bottom: white 2px solid;
+    overflow: hidden;
 }
 .navigationLinks:link {
     /*says where the text should be aligned*/
