--- a/style.css
+++ b/style.css
@@ -308,6 +308,12 @@ a:hover {
     bottom: 5vh;
     left: 56.25vw;
 }
+/*
+#slide8{
+    bottom: 5vh;
+    left: 57.5vw;
+}
+*/
 #footer{
     position: absolute;
     width: 100vw;
