--- a/style.css
+++ b/style.css
@@ -240,6 +240,12 @@ a:hover {
     height: 100vh;
     transition: left 1s;
 }
+#codeSmash{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    transition: left 1s;
+}
 #toBeContinue{
     position: absolute;
     width: 100vw;
@@ -282,38 +288,36 @@ a:hover {
 #slide1{
     /*2.5% apart, 1.25% change everytime*/
     bottom: 5vh;
-    left: 41.25vw;
+    left: 40vw;
 }
 #slide2{
     bottom: 5vh;
-    left: 43.75vw;
+    left: 42.5vw;
 }
 #slide3{
     bottom: 5vh;
-    left: 46.25vw;
+    left: 45vw;
 }
 #slide4{
     bottom: 5vh;
-    left: 48.75vw;
+    left: 47.5vw;
 }
 #slide5{
     bottom: 5vh;
-    left: 51.25vw;
+    left: 50vw;
 }
 #slide6{
     bottom: 5vh;
-    left: 53.75vw;
+    left: 52.5vw;
 }
 #slide7{
     bottom: 5vh;
-    left: 56.25vw;
+    left: 55vw;
 }
-/*
 #slide8{
     bottom: 5vh;
     left: 57.5vw;
 }
-*/
 #footer{
     position: absolute;
     width: 100vw;
